--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ img {
 
 .scrollToTop {
   bottom: 60px;
-  color: #fff;
+  color: white;
   display: none;
   font-size: 30px;
   line-height: 50px;
@@ -363,15 +363,15 @@ img {
   transition: all 0.5s ease 0s;
   height: 55px;
   border-radius: 50%;
-  background-color: #0accc7;
-  border-color: white;
-
+  border-color: #6f6f6f;
+  background-color: #6f6f6f;
 }
 
 
 .scrollToTop:hover,
 .scrollToTop:focus {
-  color: #fff;
+  color: #6f6f6f;
+  background-color: white;
 }
 
 /*==================
@@ -2358,7 +2358,8 @@ margin-bottom: 60px;
 
 .menu-row .image .text u {
   text-decoration: none;
-  border-bottom: 2px solid white;
+  background-color: rgba(0,0,0,.5);
+  padding: 4px;
 }
 
 .menu-row .image .text .line {
@@ -2706,7 +2707,7 @@ margin-top: 120px;
   text-align: right;
   float: right;
   color: #0accc7;
-  line-height: 140%;
+  line-height: 170%;
 }
 
 .menupage-row .menu-text .item .description {
